Build using two strategies